@@ -1,0 +1,3 @@
+Install with the following:
+
+  python setup.py install
